# use-notify

./: .flake8  .gitignore  CHANGELOG.md  LOGURU_INTEGRATION.md  Makefile  README.md  SKILL.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
.kiro/specs/notify-decorator/: design.md  requirements.md  (+1 more)
docs/: .gitignore  decorator.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: auth.md  channels.md  client.md  config.md  decorator.md  discovery.md  exceptions.md  index.md  usenotify.md
docs/guide/: best-practices.md  channels.md  configuration.md  decorator.md  getting-started.md  index.md
example/: current_time_demo.py  decorator_default_instance.py  decorator_demo.py  decorator_real_usage.py  demo.py  from_setting.py  loguru_demo.py  ntfy_demo.py  ntfy_from_settings.py  ntfy_integration.py  ntfy_simple.py  real_world_example.py  test_loguru_basic.py
notify/: addict.py  default_settings.py  notification.py  utils.py
notify/channels/: bark.py  chanify.py  ding.py  email.py  pushdeer.py  pushover.py  wechat.py
skill-references/: channels.md  quickstart.md  troubleshooting.md
src/notify/: __init__.py  notification.py
src/use_notify/: __init__.py  _validation.py  loguru_integration.py  loguru_types.py  notification.py  redaction.py
src/usepy_plugin_notify/: notification.py
test_project/: __init__.py  demo.py  demo2.py  settings.py
test_project/channels/: __init__.py  custom.py
tests/: __init__.py  conftest.py  helpers.py  test_bark.py  test_chanify.py  test_channels.py  test_decorator.py  test_ding.py  test_email.py  test_feishu.py  test_from_settings.py  test_loguru_integration.py  test_notification.py  test_ntfy.py  test_publisher.py  test_pushdeer.py  test_wechat.py
(+39 files in other folders)
