[tool.poetry]
name = "usepy-plugin-notify"
version = "0.3.0"
description = "一个简单可扩展的异步消息通知库"
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [
    { include = 'usepy_plugin_notify', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.8"
usepy = "^0.2.6"
httpx = "^0.23.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
