[project]
name = "use-notify"
version = "0.3.5"
description = "一个简单可扩展的异步消息通知库"
readme = "README.md"
requires-python = ">=3.8,<4.0"
authors = [
    { name = "miclon", email = "jcnd@163.com" },
]
dependencies = [
    "httpx",
    "usepy>=0.4.0",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "pre-commit-hooks",
    "pylint",
    "pytest",
    "pytest-asyncio==0.18.3",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["/SKILL.md", "/skill-references/**"]
wheel-exclude = ["/SKILL.md", "/skill-references/**"]
